--- a/views/index.jade
+++ b/views/index.jade
@@ -13,3 +13,5 @@ block content
           span(data-ng-bind-html="result.htmltext")
           div.aside
             i.glypicon.glypicon-screenshot
+
+    button(class='headroom btn btn-default btn-block {{button.class}}')= "{{button.text}}"
