--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,13 +5,12 @@ body {
 }
 
 #searchbar {
-  position:absolute;
   margin:20px;
   width:500px;
 }
 
 #searchbar input {
-  border: 0;
+  /*border: 0;*/
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   font-size: 15px;
@@ -115,9 +114,19 @@ i.glyphicon.glyphicon-check {
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
+
+i.glyphicon.glyphicon-map-marker {
+  position: absolute;
+  right: 0px;
+  top: 12px;
+}
+
+section#mapView div#map{
+  width:100%;
+  height:500px;
+  margin-top:10px;
+}
+
 /* small mobile devices */
 @media(max-width:767px){
-  #searchbar {
-    width:250px;
-  }
 }
