--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,11 @@ html(data-ng-app='pelias')
   head
     title= title
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//cdn.leafletjs.com/leaflet-0.7.3/leaflet.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript',src='/javascripts/jquery-2.1.3.min.js')
     script(type='text/javascript',src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.3/angular.min.js')
+    script(type='text/javascript',src='//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js')
     script(type='text/javascript',src='/javascripts/script.js')
   body
     block content
