--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     section#searchbar.col-md-5.col-sm-5.col-xs-12
       form(role="search")
         div.input
-          input.form-control(type="text", data-ng-model="search", ng-focus="onFocus($event)", ng-blur="onBlur($event)", ng-keydown="keyPressed($event)", placeholder="Search")
+          input.form-control(type="text", data-ng-model="search", ng-focus="onFocus($event)", ng-blur="onBlur($event)", ng-keydown="keyPressed($event)", placeholder="Search for an address, poi etc")
 
       ul#searchresults.results
         li(data-ng-repeat="result in searchresults")
