--- a/views/testcases.jade
+++ b/views/testcases.jade
@@ -13,7 +13,7 @@ block content
             th Selected
         tbody  
           each testcase, i in testcases
-            tr(class="#{testcase.classname}")
+            tr(class="#{testcase.classname}" data-timestamp="#{testcase.timestamp}")
               th= i + 1
               td= testcase.query
               td= testcase.found_in_pelias
