fixes #7 displaying all fields

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,6 +131,11 @@ section#mapView div#map{
   margin-top:10px;
 }
 
+span.key {
+  font-family: courier;
+  color: gray;
+}
+
 /* small mobile devices */
 @media(max-width:767px){
 }
